[metadata]
name = networking-huawei
summary = Huawei driver code for interacting with neutron will be developed as part of this project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_huawei

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    huawei_ac_ml2 = networking_huawei.drivers.ac.plugins.ml2.driver:HuaweiACMechanismDriver
neutron.service_plugins =
    huawei_ac_router = networking_huawei.drivers.ac.plugins.l3.driver:HuaweiACL3RouterPlugin
oslo.config.opts =
    networking_huawei.dummy_config = networking_huawei.opts:list_dummy_opts
    networking_huawei.ac_config = networking_huawei.opts:list_ac_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_huawei/locale
domain = networking-huawei

[update_catalog]
domain = networking-huawei
output_dir = networking_huawei/locale
input_file = networking_huawei/locale/networking-huawei.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_huawei/locale/networking_huawei.pot
